--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     </div> 
 </div>
     
-         <img src="IMG_49441.png">
+         <img src="./Multimedia/IMG_49441.png">
     
     <pre><a href="#">
         ↠Hello there! 👋 I am currently an undergraduate student at NMREC, where I am passionately honing my 
