--- a/education.html
+++ b/education.html
@@ -15,7 +15,7 @@
               <b>Education</b>
             <a href="">Projects</a>
             <a href="skills.html">Skills</a>
-            <a href="./PRANEETH_RESUME.pdf" download="Praneeth_Resume">Resume</a>
+            <a href="./Resume/PRANEETH_RESUME.pdf" download="Praneeth_Resume">Resume</a>
             <a href="">Contact</a>
         </div>
            
@@ -26,7 +26,7 @@
             </div>
                 <div class="position">
                     <div class="btech">
-                        <img src="nmrec-logo.jpg">
+                        <img src="./Multimedia/nmrec-logo.jpg">
                     </div>
                     <div class="btec-info">
                          <h5>Course Work</h5>
@@ -49,7 +49,7 @@
                     </div>
 
                     <div class="inter">
-                        <img src="impulse1.png">
+                        <img src="./Multimedia/impulse1.png">
                     </div>
 
                     <div class="inter-info">
