--- a/index.html
+++ b/index.html
@@ -58,11 +58,9 @@
           ></a>
         </div>
         <div class="google logo">
-          <a href="https://www.bitlingupraneeth2704@gmail.com" target="_blank"
-            ><i class="fa-brands fa-google"></i
-          ></a>
+          <a href="https://www.bitlingupraneeth2704@gmail.com" target="_blank"><i class="fa-brands fa-google"></i></a>
         </div>
-        <div class="phone logo">
+        <div class="phone logo"> 
           <a href="#" target="_blank"
             ><i class="fa-solid fa-location-dot"></i
           ></a>
